RESOLVED FIXED267821
[IFC][Ruby] Annotation overhanging fails in vertical-lr mode
https://bugs.webkit.org/show_bug.cgi?id=267821
Summary [IFC][Ruby] Annotation overhanging fails in vertical-lr mode
alan
Reported 2024-01-20 15:32:46 PST
ssia
Attachments
[fast-cq]Patch (16.34 KB, patch)
2024-01-20 15:50 PST, alan
no flags
alan
Comment 1 2024-01-20 15:50:00 PST
Created attachment 469485 [details] [fast-cq]Patch
EWS
Comment 2 2024-01-21 16:47:08 PST
Committed 273280@main (177e6f3ab066): <https://commits.webkit.org/273280@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469485 [details].
Radar WebKit Bug Importer
Comment 3 2024-01-21 16:48:15 PST
Note You need to log in before you can comment on or make changes to this bug.