[IFC][Ruby] Annotation overhanging fails in vertical-lr mode https://bugs.webkit.org/show_bug.cgi?id=267821

Reviewed by Antti Koivisto.

1. Input rectangles to overlap checking should share the same coordinate system.
2. However it does not have to be the final visual rect.

Let's use the display box's native coordinate system (before flipping) to check whether annotation can overlap adjacent content.

* LayoutTests/fast/ruby/simple-overhang-vertical-lr-expected.html: Added.
* LayoutTests/fast/ruby/simple-overhang-vertical-lr.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineRect.h:
(WebCore::Layout::InlineRect::intersects):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::applyRubyOverhang):
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::annotationMarginBoxVisualRect):
(WebCore::Layout::annotationOverlapCheck):
(WebCore::Layout::RubyFormattingContext::overhangForAnnotationBefore):
(WebCore::Layout::RubyFormattingContext::overhangForAnnotationAfter):
(WebCore::Layout::visualRectIncludingBlockDirection): Deleted.
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.h:

Canonical link: https://commits.webkit.org/273280@main